--- a/src/package.json
+++ b/src/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "preferGlobal" : true,
   "repository": {
     "type": "git",
     "url": "https://github.com/DianMarx/STORM"
