--- a/src/package.json
+++ b/src/package.json
@@ -4,6 +4,7 @@
   "description": "STORM optimization",
   "main": "app.js",
   "dependencies": {
+    "body-parser": "^1.13.2",
     "ejs": "^2.3.2",
     "express": "^4.13.1",
     "mongodb": "^2.0.36",
@@ -14,7 +15,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "preferGlobal" : true,
+  "preferGlobal": true,
   "repository": {
     "type": "git",
     "url": "https://github.com/DianMarx/STORM"
