Fixed errors on User Manual

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ Documentation/User Manual/UserManual.log
 Documentation/User Manual/UserManual.pdf
 Documentation/User Manual/UserManual.synctex.gz
 Documentation/User Manual/UserManual.toc
+src/node_modules
